; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/android/ion/extr_ion_page_pool.c_ion_page_pool_alloc_pages.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/android/ion/extr_ion_page_pool.c_ion_page_pool_alloc_pages.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page = type { i32 }
%struct.ion_page_pool = type { i32, i32 }

@current = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.page* (%struct.ion_page_pool*)* @ion_page_pool_alloc_pages to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.page* @ion_page_pool_alloc_pages(%struct.ion_page_pool* %0) #0 {
  %2 = alloca %struct.page*, align 8
  %3 = alloca %struct.ion_page_pool*, align 8
  store %struct.ion_page_pool* %0, %struct.ion_page_pool** %3, align 8
  %4 = load i32, i32* @current, align 4
  %5 = call i64 @fatal_signal_pending(i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store %struct.page* null, %struct.page** %2, align 8
  br label %16

8:                                                ; preds = %1
  %9 = load %struct.ion_page_pool*, %struct.ion_page_pool** %3, align 8
  %10 = getelementptr inbounds %struct.ion_page_pool, %struct.ion_page_pool* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.ion_page_pool*, %struct.ion_page_pool** %3, align 8
  %13 = getelementptr inbounds %struct.ion_page_pool, %struct.ion_page_pool* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call %struct.page* @alloc_pages(i32 %11, i32 %14)
  store %struct.page* %15, %struct.page** %2, align 8
  br label %16

16:                                               ; preds = %8, %7
  %17 = load %struct.page*, %struct.page** %2, align 8
  ret %struct.page* %17
}

declare dso_local i64 @fatal_signal_pending(i32) #1

declare dso_local %struct.page* @alloc_pages(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
